Added path to get category by id
